{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 226,
  "lineage": "d55f3a71-56ec-c0ea-c011-4e4b29bdfc16",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wordle_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725555253:internet-gateway/igw-09a7d244788f0b131",
            "id": "igw-09a7d244788f0b131",
            "owner_id": "851725555253",
            "tags": {
              "Name": "wordle-igw"
            },
            "tags_all": {
              "Name": "wordle-igw"
            },
            "vpc_id": "vpc-0ff4c03bc80016349"
          },
          "dependencies": [
            "aws_vpc.wordle_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "wordle_backend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:851725555253:loadbalancer/app/wordle-backend-lb/d5025399c24a9a3b",
            "arn_suffix": "app/wordle-backend-lb/d5025399c24a9a3b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "wordle-backend-lb-430252783.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:851725555253:loadbalancer/app/wordle-backend-lb/d5025399c24a9a3b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wordle-backend-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cac1804e6da76bab"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-008fe74f63bdb98f4"
              },
              {
                "subnet_id": "subnet-0dd581ceebd678e54"
              }
            ],
            "subnets": [
              "subnet-008fe74f63bdb98f4",
              "subnet-0dd581ceebd678e54"
            ],
            "vpc_id": "vpc-0ff4c03bc80016349",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.wordle_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "wordle_backend_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:851725555253:listener/app/wordle-backend-lb/d5025399c24a9a3b/fb9e7d2435ee7fe7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:851725555253:targetgroup/wordle-backend-tg/e2bb920f35c118e8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:851725555253:listener/app/wordle-backend-lb/d5025399c24a9a3b/fb9e7d2435ee7fe7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:851725555253:loadbalancer/app/wordle-backend-lb/d5025399c24a9a3b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.wordle_backend_lb",
            "aws_lb_target_group.wordle_backend_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.wordle_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordle_backend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:851725555253:targetgroup/wordle-backend-tg/e2bb920f35c118e8",
            "arn_suffix": "targetgroup/wordle-backend-tg/e2bb920f35c118e8",
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:851725555253:targetgroup/wordle-backend-tg/e2bb920f35c118e8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:851725555253:loadbalancer/app/wordle-backend-lb/d5025399c24a9a3b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wordle-backend-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0ff4c03bc80016349"
          },
          "dependencies": [
            "aws_vpc.wordle_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725555253:route-table/rtb-0e81b1e5378cbdd79",
            "id": "rtb-0e81b1e5378cbdd79",
            "owner_id": "851725555253",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09a7d244788f0b131",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wordle-public-route-table"
            },
            "tags_all": {
              "Name": "wordle-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff4c03bc80016349"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.wordle_igw",
            "aws_vpc.wordle_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d2be7513f9f2832",
            "route_table_id": "rtb-0e81b1e5378cbdd79",
            "subnet_id": "subnet-0dd581ceebd678e54"
          },
          "dependencies": [
            "aws_internet_gateway.wordle_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_a",
            "aws_vpc.wordle_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ede86202ceab7d1",
            "route_table_id": "rtb-0e81b1e5378cbdd79",
            "subnet_id": "subnet-008fe74f63bdb98f4"
          },
          "dependencies": [
            "aws_internet_gateway.wordle_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_b",
            "aws_vpc.wordle_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725555253:security-group/sg-0cac1804e6da76bab",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cac1804e6da76bab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wordle-backend-alb-sg",
            "name_prefix": "",
            "owner_id": "851725555253",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ff4c03bc80016349"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wordle_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordle_backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725555253:security-group/sg-037d045bd82fa455f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037d045bd82fa455f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "wordle-backend-sg",
            "name_prefix": "",
            "owner_id": "851725555253",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ff4c03bc80016349"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wordle_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725555253:subnet/subnet-0dd581ceebd678e54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd581ceebd678e54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725555253",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordle-public-a"
            },
            "tags_all": {
              "Name": "wordle-public-a"
            },
            "vpc_id": "vpc-0ff4c03bc80016349"
          },
          "dependencies": [
            "aws_vpc.wordle_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725555253:subnet/subnet-008fe74f63bdb98f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008fe74f63bdb98f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725555253",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordle-public-b"
            },
            "tags_all": {
              "Name": "wordle-public-b"
            },
            "vpc_id": "vpc-0ff4c03bc80016349"
          },
          "dependencies": [
            "aws_vpc.wordle_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wordle_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725555253:vpc/vpc-0ff4c03bc80016349",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ae8620e1f389942b",
            "default_route_table_id": "rtb-0355f3b6eb032c5d8",
            "default_security_group_id": "sg-0889c4255a25cbd1c",
            "dhcp_options_id": "dopt-05a4fb6f4ca069031",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ff4c03bc80016349",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0355f3b6eb032c5d8",
            "owner_id": "851725555253",
            "tags": {
              "Name": "wordle-vpc"
            },
            "tags_all": {
              "Name": "wordle-vpc"
            }
          }
        }
      ]
    }
  ]
}